# FeatureManifolds

./: .gitignore  README.md  pyproject.toml
notebooks/: 2025-07-27_scratchpad.ipynb  2025-07-28_pca_playground.ipynb  2025-07-30_mod_train.ipynb  2025-07-31_initial_mod_model_look.ipynb  2025-07-31_look_at_mod_model.ipynb  2025-08-01_sae_train_test.ipynb  2025-08-02_sae_clustering.ipynb  2025-08-03_sae_clustering_acts.ipynb  2025-08-04_sae_train_test_synthetic.ipynb  2025-08-04_synthetic_sae_clustering.ipynb  2025-08-05-mod_addition_frequencies.ipynb  2025-08-06_sae_clustering_eigenmaps.ipynb  2025-08-07_sae_clustering_acts_fixed_a_project_onto_mlp_pca.ipynb  2025-08-07_sae_reconstructed_no_cluster.ipynb  2025-08-09_sae_clustering_recons vs_mlp_acts.ipynb  2025-08-11_sae_clustering_prune.ipynb  2025-08-11_sae_clustering_prune_recons vs_mlp_acts.ipynb  2025-08-11_sae_clustering_recons vs_mlp_acts_characterization.ipynb  2025-08-15_sae_clustering_recons_reducibility.ipynb  2025-08-16_sae_clustering_recons vs_mlp_acts.ipynb  clusters_10_sim_cutoff_0.9.pkl  clusters_1_sim_cutoff_0.5.pkl  clusters_2_sim_cutoff_0.5.pkl  modular_arithmetic_model.pth  sae_clusters.pkl  sae_clusters_15.pkl  sae_clusters_500.pkl  sae_clusters_small_batch_10.pkl  sae_clusters_small_batch_1000.pkl  sae_clusters_small_batch_15.pkl  sae_clusters_small_batch_6.pkl  sae_clusters_small_batch_7.pkl  sae_clusters_small_batch_8.pkl  sae_synthetic.pth  syn_sae_clusters.pkl
notebooks/irreducibility_results_20250815_220430/: irreducibility_summary_20250815_221901.csv
src/featureman/: gen_data.py  reducibility.py  utils.py
